<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.juancarlosalvarez.colombiaturis.InfoDemogra"
    android:background="@drawable/bandera_colombia"
    android:focusable="false">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/InfoDemo"
        android:textSize="40sp"
        android:gravity="center"
        android:id="@+id/editText"
        android:textColor="@color/forestgreen"/>



    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/Poblacion"
    android:textSize="20sp"
    android:layout_below="@+id/editText"
    android:layout_alignParentStart="true"
    android:layout_marginTop="38dp"
        android:id="@+id/textView3"
        android:textColor="@color/forestgreen"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Urbana"
        android:textSize="20sp"
        android:id="@+id/textView2"
        android:layout_marginTop="38dp"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:textColor="@color/forestgreen"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Rural"
        android:textSize="20sp"
        android:id="@+id/textView4"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:textColor="@color/forestgreen"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Alfabetismo"
        android:textSize="20sp"
        android:id="@+id/textView5"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true"
        android:layout_marginTop="38dp"
        android:textColor="@color/forestgreen"/>


</RelativeLayout>
