<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.juancarlosalvarez.colombiaturis.AcercaDe"
    android:background="@drawable/bandera_colombia"
    android:focusable="false">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/AcerdaDe"
        android:textSize="40sp"
        android:gravity="center"
        android:id="@+id/editText"
        android:textColor="@color/crimson"/>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Realizado"
        android:textSize="20sp"
        android:layout_below="@+id/editText"
        android:layout_alignParentStart="true"
        android:layout_marginTop="38dp"
        android:id="@+id/textView3"
        android:gravity="center"
        android:textColor="@color/crimson"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Anno"
        android:textSize="20sp"
        android:id="@+id/textView2"
        android:layout_marginTop="38dp"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:textColor="@color/crimson"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Derechos"
        android:textSize="20sp"
        android:id="@+id/textView4"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:textColor="@color/crimson"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Prohibido"
        android:textSize="20sp"
        android:id="@+id/textView5"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true"
        android:layout_marginTop="38dp"
        android:gravity="center"
        android:textColor="@color/crimson"/>


</RelativeLayout>
