<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.juancarlosalvarez.colombiaturis.Bares"
    android:background="@drawable/fondo2"
    android:focusable="false">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Bares"
        android:textSize="30sp"
        android:gravity="center"
        android:id="@+id/editText" />



    <ImageButton
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:src="@drawable/lacascada"
        android:id="@+id/eBar1"
        android:layout_alignTop="@+id/textView"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Bar1"
        android:layout_marginTop="44dp"
        android:textSize="20sp"
        android:layout_below="@+id/editText"
        android:layout_toEndOf="@+id/eBar1"
        android:id="@+id/textView" />

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:src="@drawable/bar2b"
        android:id="@+id/eBar2"
        android:layout_marginTop="29dp"
        android:layout_below="@+id/eBar1"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Bar2"
        android:textSize="20sp"
        android:id="@+id/btextView"
        android:layout_alignTop="@+id/eBar2"
        android:layout_alignStart="@+id/textView" />

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:src="@drawable/bar3"
        android:id="@+id/eBar3"
        android:layout_marginTop="39dp"
        android:layout_below="@+id/eBar2"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Bar3"
        android:textSize="20sp"
        android:id="@+id/ctextView"
        android:layout_alignTop="@+id/eBar3"
        android:layout_toEndOf="@+id/eBar3" />

</RelativeLayout>
